deploy.yml
Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: 10.0.0.0/16
        EnableDnsSupport: 'true'
        EnableDnsHostnames: 'true'
        Tags:
        - Key: name
          Value: vpc-trabajo

    InternetGateway:
      Type: AWS::EC2::InternetGateway

    AttachGateway:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref VPC
        InternetGatewayId: !Ref InternetGateway

    RouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC

    Route:
      Type: AWS::EC2::Route
      DependsOn: AttachGateway
      Properties:
        RouteTableId: !Ref RouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway

    Subnet:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        CidrBlock: 10.0.1.0/24
        MapPublicIpOnLaunch: true

    SubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref Subnet
        RouteTableId: !Ref RouteTable

    GrupoSeguridadJenkins:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Grupo de Seguridad de Jenkins
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 8080
            ToPort: 8080
            CidrIp: 0.0.0.0/0

    GrupoSeguridadApache:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Grupo de Seguridad de Apache
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          

    instanciaJenkins:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: ami-04b4f1a9cf54c11d0
        InstanceType: t2.micro
        KeyName: pagina_web
        SubnetId: !Ref Subnet
        SecurityGroupIds:
          - !Ref GrupoSeguridadJenkins
        Tags:
          - Key: Name
            Value: instanciaJenkins

        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            #!/bin/bash
            # Actualizar el sistema
            sudo apt-get update -y
            sudo apt-get upgrade -y

            # Instalar dependencias necesarias
            sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common fontconfig openjdk-17-jre

            # Agregar la clave GPG y el repositorio de Jenkins
            curl -fsSL https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key | sudo gpg --dearmor -o /usr/share/keyrings/jenkins-keyring.gpg
            echo "deb [signed-by=/usr/share/keyrings/jenkins-keyring.gpg] https://pkg.jenkins.io/debian-stable binary/" | sudo tee /etc/apt/sources.list.d/jenkins.list > /dev/null

            # Actualizar e instalar Jenkins
            sudo apt-get update -y
            sudo apt-get install -y jenkins

            # Iniciar y habilitar el servicio de Jenkins
            sudo systemctl start jenkins
            sudo systemctl enable jenkins

    instanciaApache:
     Type: AWS::EC2::Instance
     Properties: 
        ImageId: ami-04b4f1a9cf54c11d0
        InstanceType: t2.micro
        KeyName: pagina_web
        SubnetId: !Ref Subnet
        SecurityGroupIds:
          - !Ref GrupoSeguridadApache
        Tags:
          - Key: Name
            Value: instanciaApache

        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            apt-get update -y
            apt-get upgrade -y
            apt-get install -y apache2 git
            systemctl start apache2
            systemctl enable apache2
            cd /var/www/html
            rm -rf *
            git clone https://github.com/AndresPulidoUN/nube_pract.git .
            chown -R www-data:www-data /var/www/html
